// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c21 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c69 {
  background: #ffffff;
  padding: 16px;
}

.c16 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c13 {
  padding-right: 8px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c10 svg {
  height: 12px;
  width: 12px;
}

.c10 svg > g,
.c10 svg path {
  fill: #ffffff;
}

.c10[aria-disabled='true'] {
  pointer-events: none;
}

.c10:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c10:focus-visible {
  outline: none;
}

.c10:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c14 {
  height: 100%;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c11 .c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 .c15 {
  color: #ffffff;
}

.c11[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c11[aria-disabled='true'] .c15 {
  color: #666687;
}

.c11[aria-disabled='true'] svg > g,
.c11[aria-disabled='true'] svg path {
  fill: #666687;
}

.c11[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c11[aria-disabled='true']:active .c15 {
  color: #666687;
}

.c11[aria-disabled='true']:active svg > g,
.c11[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c11:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c11:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c11 svg > g,
.c11 svg path {
  fill: #ffffff;
}

.c49 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c49:focus {
  outline: none;
}

.c49[aria-disabled='true'] {
  cursor: not-allowed;
}

.c52 {
  padding-right: 16px;
  padding-left: 16px;
}

.c54 {
  padding-left: 12px;
}

.c42 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c45 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c50 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c44 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c46 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c53 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c47 {
  line-height: 0;
}

.c43 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c43 > * + * {
  margin-top: 4px;
}

.c48 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c48:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c55 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c55 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c55 svg path {
  fill: #666687;
}

.c56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c56 svg {
  width: 0.375rem;
}

.c51 {
  width: 100%;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c20 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c20 > * + * {
  margin-top: 24px;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 16px;
}

.c26 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c29 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c32 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c28 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c30 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c31 {
  line-height: 0;
}

.c34 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c34::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34[aria-disabled='true'] {
  color: inherit;
}

.c34:focus {
  outline: none;
  box-shadow: none;
}

.c33 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c33:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c27 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c27 > * + * {
  margin-top: 4px;
}

.c36 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c39 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c40 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c40:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c41 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c41::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:focus-within {
  outline: none;
}

.c37 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c37 > * + * {
  margin-top: 4px;
}

.c35 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c35 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c35 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c35 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c35 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c23 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c57 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c6 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c4 {
  padding-right: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c90 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c18 {
  padding-right: 56px;
  padding-left: 56px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c17 {
  color: #666687;
  font-size: 1rem;
  line-height: 1.5;
}

.c0:focus-visible {
  outline: none;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c25 {
  grid-column: span 6;
  max-width: 100%;
}

.c65 {
  font-weight: 600;
  color: #271fe0;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c68 {
  font-weight: 600;
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c63 {
  background: #ffffff;
  padding: 16px;
}

.c66 {
  background: #f6f6f9;
  padding: 12px;
}

.c58 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c64 {
  border-bottom: 1px solid #ffffff;
}

.c67 {
  border-bottom: 1px solid #eaeaef;
}

.c61 {
  border: none;
  background: transparent;
  padding: 0;
  outline-offset: -2px;
}

.c60 + .c60 > .c62 {
  border-left: 1px solid #eaeaef;
}

.c61 .c62 {
  border-right: none;
}

.c61[aria-disabled='true'] {
  cursor: not-allowed;
}

.c59 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c59 .c60:first-of-type .c62 {
  border-radius: 4px 0 0 0;
}

.c59 .c60:last-of-type .c62 {
  border-radius: 0 4px 0 0;
}

.c59 .c60[aria-selected="true"] .c62 {
  border-radius: 4px 4px 0 0;
  border-left: none;
  border-right: none;
}

.c81 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c82 {
  color: #4a4a6a;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c70 {
  border-radius: 4px;
}

.c73 {
  background: #f6f6f9;
  padding-right: 24px;
  padding-left: 24px;
}

.c76 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c84 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c86 {
  color: #666687;
  width: 0.6875rem;
}

.c89 {
  background: #ffffff;
  padding-right: 24px;
  padding-left: 24px;
}

.c74 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c77 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c85 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c71 {
  border: 1px solid #f6f6f9;
}

.c71:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c71:hover:not([aria-disabled='true']) .sc-eaPPdL {
  color: #271fe0;
}

.c71:hover:not([aria-disabled='true']) .c80 {
  color: #4945ff;
}

.c71:hover:not([aria-disabled='true']) > .c72 {
  background: #f0f0ff;
}

.c71:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c88 {
  border: 1px solid #ffffff;
}

.c88:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c88:hover:not([aria-disabled='true']) .sc-eaPPdL {
  color: #271fe0;
}

.c88:hover:not([aria-disabled='true']) .c80 {
  color: #4945ff;
}

.c88:hover:not([aria-disabled='true']) > .c72 {
  background: #f0f0ff;
}

.c88:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c78 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c78[aria-disabled='true'] {
  pointer-events: none;
}

.c78[aria-disabled='true'] svg path {
  fill: #666687;
}

.c78 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c78 svg path {
  fill: #4945ff;
}

.c78:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c78:focus-visible {
  outline: none;
}

.c78:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c83 > * {
  margin-left: 0;
  margin-right: 0;
}

.c83 > * + * {
  margin-left: 12px;
}

.c87 path {
  fill: #666687;
}

.c79 {
  text-align: left;
}

.c79 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c79 svg path {
  fill: #8e8ea9;
}

.c75 {
  height: 5.5rem;
  border-radius: 4px;
}

.c75:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c25 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c25 {
    grid-column: span 12;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div>
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <h1
                class="c9"
              >
                Create API Token
              </h1>
            </div>
            <button
              aria-disabled="false"
              class="c10 c11"
              type="submit"
            >
              <div
                aria-hidden="true"
                class="c12 c13 c14"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c15 c16"
              >
                Save
              </span>
            </button>
          </div>
          <p
            class="c17"
          />
        </div>
      </div>
      <div
        class="c18"
      >
        <div
          class="c19 c20"
          spacing="6"
        >
          <div
            class="c21"
          >
            <div
              class="c19 c22"
              spacing="4"
            >
              <h2
                class="c23"
              >
                Details
              </h2>
              <div
                class="c24"
              >
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c26 c27"
                          spacing="1"
                        >
                          <label
                            class="c28"
                            for="textinput-1"
                            required=""
                          >
                            <div
                              class="c29"
                            >
                              Name
                              <span
                                class="c30 c31"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c32 c33"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c34"
                              id="textinput-1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c35"
                    >
                      <div>
                        <div
                          class="c36 c37"
                          spacing="1"
                        >
                          <div
                            class="c38"
                          >
                            <label
                              class="c39"
                              for="textarea-1"
                            >
                              <div
                                class="c38"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c40"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c41"
                              id="textarea-1"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c42 c43"
                        spacing="1"
                      >
                        <span
                          class="c44"
                          for="select-1"
                          id="select-1-label"
                          required=""
                        >
                          <div
                            class="c45"
                          >
                            Token duration
                            <span
                              class="c46 c47"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c45 c48"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-1-label select-1-content"
                            class="c49"
                            id="select-1"
                            name="duration"
                            type="button"
                          />
                          <div
                            class="c50 c51"
                          >
                            <div
                              class="c45"
                            >
                              <div
                                class="c52"
                              >
                                <span
                                  class="c53"
                                  id="select-1-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c45"
                            >
                              <button
                                aria-hidden="true"
                                class="c54 c55 c56"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c57"
                    />
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c42 c43"
                        spacing="1"
                      >
                        <span
                          class="c44"
                          for="select-2"
                          id="select-2-label"
                          required=""
                        >
                          <div
                            class="c45"
                          >
                            Token type
                            <span
                              class="c46 c47"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c45 c48"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-2-label select-2-content"
                            class="c49"
                            id="select-2"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c50 c51"
                          >
                            <div
                              class="c45"
                            >
                              <div
                                class="c52"
                              >
                                <span
                                  class="c53"
                                  id="select-2-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c45"
                            >
                              <button
                                aria-hidden="true"
                                class="c54 c55 c56"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              aria-label="Tabs Permissions"
              class="c58 c59"
              role="tablist"
            >
              <button
                aria-controls="tabs-0-tabpanel"
                aria-disabled="false"
                aria-selected="true"
                class="c60 c61"
                id="tabs-0-tab"
                role="tab"
                tabindex="0"
                type="button"
              >
                <div
                  class="c62 c63 c64"
                >
                  <span
                    class="c65"
                  >
                    Collection Types
                  </span>
                </div>
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                class="c60 c61"
                id="tabs-1-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="c62 c66 c67"
                >
                  <span
                    class="c68"
                  >
                    Single Types
                  </span>
                </div>
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                class="c60 c61"
                id="tabs-2-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="c62 c66 c67"
                >
                  <span
                    class="c68"
                  >
                    Custom
                  </span>
                </div>
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <div
                aria-labelledby="tabs-0-tab"
                id="tabs-0-tabpanel"
                role="tabpanel"
                tabindex="0"
              >
                <div
                  class="c69"
                >
                  <div
                    aria-disabled="false"
                    class="c70 c71"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c72 c73 c74 c75"
                      cursor=""
                    >
                      <button
                        aria-controls="accordion-content-accordion-1"
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-labelledby="accordion-label-accordion-1"
                        class="c72 c76 c77 c78 c79"
                        data-strapi-accordion-toggle="true"
                        type="button"
                      >
                        <span
                          class="c80 c81"
                        >
                          <span
                            class="c80 c82"
                            id="accordion-label-accordion-1"
                          >
                            category
                          </span>
                        </span>
                      </button>
                      <div
                        class="c72 c77 c83"
                        spacing="3"
                      >
                        <span
                          aria-hidden="true"
                          class="c72 c84 c85"
                          cursor="pointer"
                          data-strapi-dropdown="true"
                          height="2rem"
                          width="2rem"
                        >
                          <svg
                            class="c86 c87"
                            fill="none"
                            height="1em"
                            viewBox="0 0 14 8"
                            width="0.6875rem"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                              fill="#32324D"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c70 c88"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c72 c89 c74 c75"
                      cursor=""
                    >
                      <button
                        aria-controls="accordion-content-accordion-2"
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-labelledby="accordion-label-accordion-2"
                        class="c72 c76 c77 c78 c79"
                        data-strapi-accordion-toggle="true"
                        type="button"
                      >
                        <span
                          class="c80 c81"
                        >
                          <span
                            class="c80 c82"
                            id="accordion-label-accordion-2"
                          >
                            country
                          </span>
                        </span>
                      </button>
                      <div
                        class="c72 c77 c83"
                        spacing="3"
                      >
                        <span
                          aria-hidden="true"
                          class="c72 c84 c85"
                          cursor="pointer"
                          data-strapi-dropdown="true"
                          height="2rem"
                          width="2rem"
                        >
                          <svg
                            class="c86 c87"
                            fill="none"
                            height="1em"
                            viewBox="0 0 14 8"
                            width="0.6875rem"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                              fill="#32324D"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c90"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c29 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c80 {
  background: #ffffff;
  padding: 16px;
}

.c16 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c13 {
  padding-right: 8px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c10 svg {
  height: 12px;
  width: 12px;
}

.c10 svg > g,
.c10 svg path {
  fill: #ffffff;
}

.c10[aria-disabled='true'] {
  pointer-events: none;
}

.c10:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c10:focus-visible {
  outline: none;
}

.c10:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c14 {
  height: 100%;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c11 .c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 .c15 {
  color: #ffffff;
}

.c11[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c11[aria-disabled='true'] .c15 {
  color: #666687;
}

.c11[aria-disabled='true'] svg > g,
.c11[aria-disabled='true'] svg path {
  fill: #666687;
}

.c11[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c11[aria-disabled='true']:active .c15 {
  color: #666687;
}

.c11[aria-disabled='true']:active svg > g,
.c11[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c11:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c11:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c11 svg > g,
.c11 svg path {
  fill: #ffffff;
}

.c21 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c23 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c22 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c57 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c57:focus {
  outline: none;
}

.c57[aria-disabled='true'] {
  cursor: not-allowed;
}

.c60 {
  padding-right: 16px;
  padding-left: 16px;
}

.c62 {
  padding-left: 12px;
}

.c50 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c53 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c58 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c52 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c54 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c61 {
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c67 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c55 {
  line-height: 0;
}

.c51 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c51 > * + * {
  margin-top: 4px;
}

.c56 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c56:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c66 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c66:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c63 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c63 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c63 svg path {
  fill: #666687;
}

.c64 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c64 svg {
  width: 0.375rem;
}

.c68 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c68 svg {
  width: 0.375rem;
}

.c59 {
  width: 100%;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c20 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c20 > * + * {
  margin-top: 24px;
}

.c25 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c25 > * + * {
  margin-top: 4px;
}

.c30 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c30 > * + * {
  margin-top: 16px;
}

.c34 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c40 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c36 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c38 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c39 {
  line-height: 0;
}

.c42 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c42::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42[aria-disabled='true'] {
  color: inherit;
}

.c42:focus {
  outline: none;
  box-shadow: none;
}

.c41 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c41:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c35 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c35 > * + * {
  margin-top: 4px;
}

.c44 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c46 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c47 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c48 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c48:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c49 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c49::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c49::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c49:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c49::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c49:focus-within {
  outline: none;
}

.c45 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c45 > * + * {
  margin-top: 4px;
}

.c43 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c43 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c43 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c43 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c43 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c26 {
  font-weight: 500;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c28 {
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c31 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c65 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c6 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c4 {
  padding-right: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c24 {
  margin-right: 24px;
}

.c24 svg {
  width: 2rem;
  height: 2rem;
}

.c27 {
  word-break: break-all;
}

.c101 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c18 {
  padding-right: 56px;
  padding-left: 56px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c17 {
  color: #666687;
  font-size: 1rem;
  line-height: 1.5;
}

.c0:focus-visible {
  outline: none;
}

.c32 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c33 {
  grid-column: span 6;
  max-width: 100%;
}

.c76 {
  font-weight: 600;
  color: #271fe0;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c79 {
  font-weight: 600;
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c74 {
  background: #ffffff;
  padding: 16px;
}

.c77 {
  background: #f6f6f9;
  padding: 12px;
}

.c69 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c75 {
  border-bottom: 1px solid #ffffff;
}

.c78 {
  border-bottom: 1px solid #eaeaef;
}

.c72 {
  border: none;
  background: transparent;
  padding: 0;
  outline-offset: -2px;
}

.c71 + .c71 > .c73 {
  border-left: 1px solid #eaeaef;
}

.c72 .c73 {
  border-right: none;
}

.c72[aria-disabled='true'] {
  cursor: not-allowed;
}

.c70 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c70 .c71:first-of-type .c73 {
  border-radius: 4px 0 0 0;
}

.c70 .c71:last-of-type .c73 {
  border-radius: 0 4px 0 0;
}

.c70 .c71[aria-selected="true"] .c73 {
  border-radius: 4px 4px 0 0;
  border-left: none;
  border-right: none;
}

.c92 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c93 {
  color: #4a4a6a;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c81 {
  border-radius: 4px;
}

.c84 {
  background: #f6f6f9;
  padding-right: 24px;
  padding-left: 24px;
}

.c87 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c95 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c97 {
  color: #666687;
  width: 0.6875rem;
}

.c100 {
  background: #ffffff;
  padding-right: 24px;
  padding-left: 24px;
}

.c85 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c88 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c96 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c82 {
  border: 1px solid #f6f6f9;
}

.c82:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c82:hover:not([aria-disabled='true']) .sc-eaPPdL {
  color: #271fe0;
}

.c82:hover:not([aria-disabled='true']) .c91 {
  color: #4945ff;
}

.c82:hover:not([aria-disabled='true']) > .c83 {
  background: #f0f0ff;
}

.c82:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c99 {
  border: 1px solid #ffffff;
}

.c99:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c99:hover:not([aria-disabled='true']) .sc-eaPPdL {
  color: #271fe0;
}

.c99:hover:not([aria-disabled='true']) .c91 {
  color: #4945ff;
}

.c99:hover:not([aria-disabled='true']) > .c83 {
  background: #f0f0ff;
}

.c99:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c89 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c89[aria-disabled='true'] {
  pointer-events: none;
}

.c89[aria-disabled='true'] svg path {
  fill: #666687;
}

.c89 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c89 svg path {
  fill: #4945ff;
}

.c89:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c89:focus-visible {
  outline: none;
}

.c89:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c94 > * {
  margin-left: 0;
  margin-right: 0;
}

.c94 > * + * {
  margin-left: 12px;
}

.c98 path {
  fill: #666687;
}

.c90 {
  text-align: left;
}

.c90 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c90 svg path {
  fill: #8e8ea9;
}

.c86 {
  height: 5.5rem;
  border-radius: 4px;
}

.c86:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c33 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c33 {
    grid-column: span 12;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <h1
                class="c9"
              >
                My super token
              </h1>
            </div>
            <button
              aria-disabled="false"
              class="c10 c11"
              type="submit"
            >
              <div
                aria-hidden="true"
                class="c12 c13 c14"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c15 c16"
              >
                Save
              </span>
            </button>
          </div>
          <p
            class="c17"
          />
        </div>
      </div>
      <div
        class="c18"
      >
        <div
          class="c19 c20"
          spacing="6"
        >
          <div
            class="c21 c22"
          >
            <div
              class="c23 c22 c24"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 110-4H23v4h-2v4h-4v-4zM7 14a2 2 0 100-4 2 2 0 000 4z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c19 c25"
              spacing="1"
            >
              <div
                class="c22"
              >
                <span
                  class="c26 c27"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c28"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c29"
          >
            <div
              class="c19 c30"
              spacing="4"
            >
              <h2
                class="c31"
              >
                Details
              </h2>
              <div
                class="c32"
              >
                <div
                  class="c33"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c34 c35"
                          spacing="1"
                        >
                          <label
                            class="c36"
                            for="textinput-2"
                            required=""
                          >
                            <div
                              class="c37"
                            >
                              Name
                              <span
                                class="c38 c39"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c40 c41"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c42"
                              id="textinput-2"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c43"
                    >
                      <div>
                        <div
                          class="c44 c45"
                          spacing="1"
                        >
                          <div
                            class="c46"
                          >
                            <label
                              class="c47"
                              for="textarea-2"
                            >
                              <div
                                class="c46"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c48"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c49"
                              id="textarea-2"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c50 c51"
                        spacing="1"
                      >
                        <span
                          class="c52"
                          for="select-3"
                          id="select-3-label"
                          required=""
                        >
                          <div
                            class="c53"
                          >
                            Token duration
                            <span
                              class="c54 c55"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c53 c56"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-3-label select-3-content"
                            class="c57"
                            id="select-3"
                            name="duration"
                            type="button"
                          />
                          <div
                            class="c58 c59"
                          >
                            <div
                              class="c53"
                            >
                              <div
                                class="c60"
                              >
                                <span
                                  class="c61"
                                  id="select-3-content"
                                >
                                  7 days
                                </span>
                              </div>
                            </div>
                            <div
                              class="c53"
                            >
                              <button
                                aria-hidden="true"
                                class="c62 c63 c64"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c65"
                    >
                      Expiration date: November 22nd, 2021
                    </span>
                  </div>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c50 c51"
                        spacing="1"
                      >
                        <span
                          class="c52"
                          for="select-4"
                          id="select-4-label"
                          required=""
                        >
                          <div
                            class="c53"
                          >
                            Token type
                            <span
                              class="c54 c55"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c53 c66"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-4-label select-4-content"
                            class="c57"
                            id="select-4"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c58 c59"
                          >
                            <div
                              class="c53"
                            >
                              <div
                                class="c60"
                              >
                                <span
                                  class="c67"
                                  id="select-4-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c53"
                            >
                              <button
                                aria-hidden="true"
                                class="c62 c63 c68"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              aria-label="Tabs Permissions"
              class="c69 c70"
              role="tablist"
            >
              <button
                aria-controls="tabs-0-tabpanel"
                aria-disabled="false"
                aria-selected="true"
                class="c71 c72"
                id="tabs-0-tab"
                role="tab"
                tabindex="0"
                type="button"
              >
                <div
                  class="c73 c74 c75"
                >
                  <span
                    class="c76"
                  >
                    Collection Types
                  </span>
                </div>
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                class="c71 c72"
                id="tabs-1-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="c73 c77 c78"
                >
                  <span
                    class="c79"
                  >
                    Single Types
                  </span>
                </div>
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                class="c71 c72"
                id="tabs-2-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="c73 c77 c78"
                >
                  <span
                    class="c79"
                  >
                    Custom
                  </span>
                </div>
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <div
                aria-labelledby="tabs-0-tab"
                id="tabs-0-tabpanel"
                role="tabpanel"
                tabindex="0"
              >
                <div
                  class="c80"
                >
                  <div
                    aria-disabled="false"
                    class="c81 c82"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c83 c84 c85 c86"
                      cursor=""
                    >
                      <button
                        aria-controls="accordion-content-accordion-3"
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-labelledby="accordion-label-accordion-3"
                        class="c83 c87 c88 c89 c90"
                        data-strapi-accordion-toggle="true"
                        type="button"
                      >
                        <span
                          class="c91 c92"
                        >
                          <span
                            class="c91 c93"
                            id="accordion-label-accordion-3"
                          >
                            category
                          </span>
                        </span>
                      </button>
                      <div
                        class="c83 c88 c94"
                        spacing="3"
                      >
                        <span
                          aria-hidden="true"
                          class="c83 c95 c96"
                          cursor="pointer"
                          data-strapi-dropdown="true"
                          height="2rem"
                          width="2rem"
                        >
                          <svg
                            class="c97 c98"
                            fill="none"
                            height="1em"
                            viewBox="0 0 14 8"
                            width="0.6875rem"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                              fill="#32324D"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c81 c99"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c83 c100 c85 c86"
                      cursor=""
                    >
                      <button
                        aria-controls="accordion-content-accordion-4"
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-labelledby="accordion-label-accordion-4"
                        class="c83 c87 c88 c89 c90"
                        data-strapi-accordion-toggle="true"
                        type="button"
                      >
                        <span
                          class="c91 c92"
                        >
                          <span
                            class="c91 c93"
                            id="accordion-label-accordion-4"
                          >
                            country
                          </span>
                        </span>
                      </button>
                      <div
                        class="c83 c88 c94"
                        spacing="3"
                      >
                        <span
                          aria-hidden="true"
                          class="c83 c95 c96"
                          cursor="pointer"
                          data-strapi-dropdown="true"
                          height="2rem"
                          width="2rem"
                        >
                          <svg
                            class="c97 c98"
                            fill="none"
                            height="1em"
                            viewBox="0 0 14 8"
                            width="0.6875rem"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                              fill="#32324D"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c101"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
